# PRJ_DURANDAL

./: README.md  durandal_libretro.info
M2D/: COPYING.txt  Images.imgA  README.txt  Readme.md
M2D/Extras/: Carnage_Messages.mml  Cheats.lua  Software_Transparent_Liquids.mml
M2D/Plugins/Basic HUD/: Basic HUD.lua  Plugin.xml
M2D/Plugins/Enhanced HUD/: FOV.mml  Plugin.xml  Readme.txt  XBLA.lua
M2D/Plugins/Enhanced HUD/squarishsans/: SquarishSansCT.README
M2D/Plugins/Marathon 2 Stats/: Plugin.xml  stats.lua
M2D/Plugins/Marathon 2 Theme/: Plugin.xml  Readme.txt
M2D/Plugins/Marathon 2 Theme/resources/: LICENSE-DejaVu  theme2.mml
M2D/Plugins/Transparent Liquids/: Plugin.xml
M2D/Scripts/: Default Preferences.xml
M2D/docs/: Lua.html  Lua_HUD.html  MML.html
M2D/docs/Library Licenses/: COPYING-SDL.txt  README-smpeg.txt  zlib_license.html
alephone/: CMakeLists.txt  Makefile.libretro  build_monolith.sh  build_standalone.bat  configure~  embedded.S  openal_stub.cpp  sndfile_stub.c
alephone/Source_Files/: shell.cpp
alephone/Source_Files/CSeries/: cseries.h  csmisc_sdl.cpp
alephone/Source_Files/Input/: mouse_sdl.cpp
alephone/Source_Files/Misc/: Logging.cpp  ScenarioChooser.cpp  interface.cpp  vbl.cpp
alephone/Source_Files/RenderOther/: screen.cpp
alephone/Source_Files/Sound/: OpenALManager.cpp
skeletor/: libretro.cpp  libretro.h
